--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -15,12 +15,17 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="edu.berkeley.cs160.mSpray.MSpray"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name="edu.berkeley.cs160.mSpray.SprayerIDScan"
+            android:screenOrientation="portrait">
+            
         </activity>
     </application>
 
