--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -27,6 +27,7 @@
             android:screenOrientation="portrait">
             
         </activity>
+        <activity android:name="edu.berkeley.cs160.mSpray.GetGpsActivity"></activity>
     </application>
 
 </manifest>
