--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -28,6 +28,7 @@
             
         </activity>
         <activity android:name="edu.berkeley.cs160.mSpray.GetGpsActivity"></activity>
+        <activity android:name="edu.berkeley.cs160.mSpray.PaperWorkChoiceActivity"></activity>
     </application>
 
 </manifest>
