--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -30,6 +30,9 @@
         <activity android:name="edu.berkeley.cs160.mSpray.GetGpsActivity"></activity>
         <activity android:name="edu.berkeley.cs160.mSpray.PaperWorkChoiceActivity"></activity>
         <activity android:name="edu.berkeley.cs160.mSpray.NoSprayActivity"></activity>
+        <activity android:name="edu.berkeley.cs160.mSpray.PyrethroidActivity"></activity>
+        <activity android:name="edu.berkeley.cs160.mSpray.DDTform"></activity>
+        <activity android:name="edu.berkeley.cs160.mSpray.ConfirmDDT"></activity>
     </application>
 
 </manifest>
