fixed assorted bugs related to activities

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -34,7 +34,7 @@
         <activity android:name="edu.berkeley.cs160.mSpray.PyrethroidActivity" ></activity>
         <activity android:name="edu.berkeley.cs160.mSpray.OtherChemicalUsedActivity" ></activity>
         <activity android:name="edu.berkeley.cs160.mSpray.SecondChemicalUsedActivity" ></activity>
-        <activity android:name="edu.berkeley.cs160.mSpray.DDTform" ></activity>
+        <activity android:name="edu.berkeley.cs160.mSpray.PyrethroidActivity" ></activity>
         <activity android:name="edu.berkeley.cs160.mSpray.ConfirmDDT" ></activity>
         <activity android:name="edu.berkeley.cs160.mSpray.ConfirmNoSpray" ></activity>
         <activity android:name="edu.berkeley.cs160.mSpray.ConfirmPyrethroid" ></activity>
