--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,11 +18,10 @@
             android:name="edu.berkeley.cs160.mSpray.MSpray"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            
+            
+            
+            
         </activity>
         <activity
             android:name="edu.berkeley.cs160.mSpray.SprayerIDScan"
@@ -37,6 +36,13 @@
         <activity android:name="edu.berkeley.cs160.mSpray.ConfirmNoSpray" ></activity>
         <activity android:name="edu.berkeley.cs160.mSpray.ConfirmPyrethroid" ></activity>
         <activity android:name="edu.berkeley.cs160.mSpray.FinishedActivity"></activity>
+        <activity android:name="edu.berkeley.cs160.mSpray.ScanForeman">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
