--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,6 +22,11 @@
             android:name="edu.berkeley.cs160.mSpray.MSpray"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name="edu.berkeley.cs160.mSpray.SprayerIDScan"
@@ -46,12 +51,10 @@
         <activity android:name="edu.berkeley.cs160.mSpray.FinishedActivity" >
         </activity>
         <activity android:name="edu.berkeley.cs160.mSpray.ScanForeman" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
+        <activity android:name="edu.berkeley.cs160.mSpray.ScanSprayer" ></activity>
+        <activity android:name="edu.berkeley.cs160.mSpray.ChooseSprayer"></activity>
+        <activity android:name="edu.berkeley.cs160.mSpray.StartNewSpray"></activity>
     </application>
 
 </manifest>
