scanning for sprayer after paperwork screen NOT DONE.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -52,7 +52,7 @@
         </activity>
         <activity android:name="edu.berkeley.cs160.mSpray.ScanForeman" >
         </activity>
-        <activity android:name="edu.berkeley.cs160.mSpray.ScanSprayer" >
+        <activity android:name="edu.berkeley.cs160.mSpray.ScanSprayer1" >
         </activity>
         <activity android:name="edu.berkeley.cs160.mSpray.ChooseSprayer" >
         </activity>
