--- a/mSprayApp/AndroidManifest.xml
+++ b/mSprayApp/AndroidManifest.xml
@@ -7,7 +7,9 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.INTERNET" >
     </uses-permission>
-
+    <uses-permission android:name="android.permission.NFC" />
+	<uses-feature android:name="android.hardware.nfc" android:required="true" />
+    
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="17" />
