--- a/mSprayApp/AndroidManifest.xml
+++ b/mSprayApp/AndroidManifest.xml
@@ -8,8 +8,11 @@
     <uses-permission android:name="android.permission.INTERNET" >
     </uses-permission>
     <uses-permission android:name="android.permission.NFC" />
-	<uses-feature android:name="android.hardware.nfc" android:required="true" />
-    
+
+    <uses-feature
+        android:name="android.hardware.nfc"
+        android:required="true" />
+
     <uses-sdk
         android:minSdkVersion="10"
         android:targetSdkVersion="17" />
@@ -27,11 +30,6 @@
             android:name="edu.berkeley.cs160.mSpray.MSpray"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name="edu.berkeley.cs160.mSpray.SprayerIDScan"
@@ -72,6 +70,11 @@
         <activity
             android:name="edu.berkeley.cs160.mSpray.ScanForeman"
             android:screenOrientation="portrait" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name="edu.berkeley.cs160.mSpray.ScanSprayer"
