--- a/PDFFill/.classpath
+++ b/PDFFill/.classpath
@@ -11,5 +11,8 @@
 	<classpathentry kind="lib" path="lib/itextpdf-5.4.0-javadoc.jar"/>
 	<classpathentry kind="lib" path="lib/itextpdf-5.4.0-sources.jar"/>
 	<classpathentry kind="lib" path="lib/itextpdf-5.4.0.jar"/>
+	<classpathentry kind="lib" path="lib/gdata-core-1.0.jar"/>
+	<classpathentry kind="lib" path="lib/gdata-spreadsheet-3.0.jar"/>
+	<classpathentry kind="lib" path="lib/guava-11.0.2.jar"/>
 	<classpathentry kind="output" path=""/>
 </classpath>
