moving downloads to separate file

--- a/PDFFill/Makefile
+++ b/PDFFill/Makefile
@@ -1,4 +1,8 @@
+compile:
+	-javac -cp ".:lib/*" *.java 2> /dev/null > /dev/null
+
 clean:
-	-rm sp1/* 2> /dev/null > /dev/null
+	-rm -rf sp1 2> /dev/null > /dev/null
+	-rm *.class
 
 really-clean: clean
