more download framework

--- a/PDFFill/Makefile
+++ b/PDFFill/Makefile
@@ -1,8 +1,16 @@
 compile:
-	-javac -cp ".:lib/*" *.java 2> /dev/null > /dev/null
+	@-javac -cp ".:lib/*" *.java 2> /dev/null > /dev/null
+
+download:
+	@-javac -cp ".:lib/*" *.java 2> /dev/null > /dev/null
+	@-java -cp ".:lib/*" DownloadMSprayFiles
 
 clean:
-	-rm -rf sp1 2> /dev/null > /dev/null
-	-rm *.class
+	@-rm -rf sp1 2> /dev/null > /dev/null
+	@-rm *.class 2> /dev/null > /dev/null
+	@-rm *~ 2> /dev/null > /dev/null
+	@-rm -rf sp1 2> /dev/null > /dev/null
+	@-rm -rf sp2 2> /dev/null > /dev/null
+	@-rm -rf sp3 2> /dev/null > /dev/null
 
 really-clean: clean
