--- a/SPFormGenerator/.project
+++ b/SPFormGenerator/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>PDFFill</name>
+	<name>SP Form Generator</name>
 	<comment></comment>
 	<projects>
 	</projects>
