--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,18 @@ gen/
 PDFFill/sp1
 PDFFill/sp2
 PDFFill/sp3
+
+# Eclipse files
+*.classpath
+.settings/
+
+# Dropbox files
+*.lock
+
+# Mac files
+*.DS_Store
+*.swp
+*.out
+
+# temp files
+*~
